--- a/miniSys0.4.csproj
+++ b/miniSys0.4.csproj
@@ -76,7 +76,9 @@
     <Reference Include="SunnyUI.Common, Version=3.1.2.0, Culture=neutral, PublicKeyToken=5a271fb7ba597231, processorArchitecture=MSIL">
       <HintPath>packages\SunnyUI.Common.3.1.2\lib\net472\SunnyUI.Common.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Web" />
@@ -98,12 +100,6 @@
     </Compile>
     <Compile Include="AddDescription.Designer.cs">
       <DependentUpon>AddDescription.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CommonlyControls.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CommonlyControls.Designer.cs">
-      <DependentUpon>CommonlyControls.cs</DependentUpon>
     </Compile>
     <Compile Include="ControlEvent.cs" />
     <Compile Include="Controls\MainArea\UC_Cus_dashboard.cs">
@@ -411,9 +407,7 @@
     </Compile>
     <EmbeddedResource Include="AddDescription.resx">
       <DependentUpon>AddDescription.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="CommonlyControls.resx">
-      <DependentUpon>CommonlyControls.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MainArea\UC_Cus_dashboard.resx">
       <DependentUpon>UC_Cus_dashboard.cs</DependentUpon>
