--- a/miniSys0.4.csproj
+++ b/miniSys0.4.csproj
@@ -288,6 +288,18 @@
     <Compile Include="Controls\Others\UC_Registe_Staff_Basicinfo.Designer.cs">
       <DependentUpon>UC_Registe_Staff_Basicinfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Others\UC_ReportTable_card.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Others\UC_ReportTable_card.Designer.cs">
+      <DependentUpon>UC_ReportTable_card.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Others\UC_Report_table.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Others\UC_Report_table.Designer.cs">
+      <DependentUpon>UC_Report_table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Others\UC_SecureSet.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -519,6 +531,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Others\UC_Registe_Staff_Basicinfo.resx">
       <DependentUpon>UC_Registe_Staff_Basicinfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Others\UC_ReportTable_card.resx">
+      <DependentUpon>UC_ReportTable_card.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Others\UC_Report_table.resx">
+      <DependentUpon>UC_Report_table.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Others\UC_SecureSet.resx">
       <DependentUpon>UC_SecureSet.cs</DependentUpon>
