--- a/miniSys0.4.csproj
+++ b/miniSys0.4.csproj
@@ -576,6 +576,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FormFloating.resx">
       <DependentUpon>FormFloating.cs</DependentUpon>
